syntax = "proto3";

package pb;
// option go_package = "path;name";
option go_package = "./pb_gen;pb_gen";

//RPC接口
service LiteKubeVpnService {
  rpc HelloWorld(HelloWorldRequest) returns (HelloWorldResponse) {}
  rpc GetToken(GetTokenRequest) returns (GetTokenResponse) {}
  rpc CheckConnState(CheckConnStateRequest) returns (CheckConnResponse){}
  rpc UnRegister(UnRegisterRequest) returns (UnRegisterResponse){}
  rpc GetRegistedIp(GetRegistedIpRequest) returns (GetRegistedIpResponse){}
}

message HelloWorldRequest {
  string hello_text = 1;
}

message HelloWorldResponse {
  string thanks_text = 1;
}

message GetTokenRequest {}

message GetTokenResponse {
  string code = 1;
  string message = 2;
  string token = 3;
  string GrpcCaCert=4;
  string GrpcClientKey=5;
  string GrpcClientCert=6;
  string VpnCaCert=7;
  string VpnClientKey=8;
  string VpnClientCert=9;
}

message CheckConnStateRequest {
  string token = 1;
}

message CheckConnResponse {
  string code = 1;
  string message = 2;
  int32 connState = 3;
  string bind_ip = 4;
}

message UnRegisterRequest {
  string token = 1;
}

message UnRegisterResponse {
  string code = 1;
  string message = 2;
  bool result = 3;
}

message GetRegistedIpRequest {
  string token = 1;
}

message GetRegistedIpResponse {
  string code = 1;
  string message = 2;
  string ip = 3;
}
